--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,8 @@ variables:
   buildConfiguration: 'Release'
 
   steps:
+    - task: NuGetToolInstaller@1
+    
     - script: 'echo "test" > test.txt'
     displayName: 'Write build info'
     workingDirectory: Tailspin.SpaceGame.Web/wwwroot
